[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/GGS/src/components/boolean/ggsBool.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Helpers/GUI/Pause/PauseMenu.gd" type="Script" id=3]
[ext_resource path="res://assets/GUI/Theme/Themes/MenuTheme.tres" type="Theme" id=4]

[node name="PauseMenu" type="CenterContainer"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
theme = ExtResource( 4 )
use_top_left = true
script = ExtResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_left = -85.0
margin_top = -86.0
margin_right = 85.0
margin_bottom = 85.0

[node name="PauseMenuContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 165.0
margin_bottom = 166.0

[node name="Label" type="Label" parent="PanelContainer/PauseMenuContainer"]
margin_right = 160.0
margin_bottom = 17.0
text = "Pause"
align = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/PauseMenuContainer"]
margin_top = 21.0
margin_right = 160.0
margin_bottom = 25.0

[node name="ResumeButton" type="Button" parent="PanelContainer/PauseMenuContainer"]
margin_top = 29.0
margin_right = 160.0
margin_bottom = 59.0
rect_min_size = Vector2( 160, 30 )
size_flags_horizontal = 4
text = "Resume"

[node name="RestartButton" type="Button" parent="PanelContainer/PauseMenuContainer"]
margin_top = 63.0
margin_right = 160.0
margin_bottom = 93.0
rect_min_size = Vector2( 160, 30 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
text = "Restart"

[node name="SettingsButton" type="Button" parent="PanelContainer/PauseMenuContainer"]
margin_top = 97.0
margin_right = 160.0
margin_bottom = 127.0
rect_min_size = Vector2( 160, 30 )
size_flags_horizontal = 4
text = "Settings"

[node name="ExitButton" type="Button" parent="PanelContainer/PauseMenuContainer"]
margin_top = 131.0
margin_right = 160.0
margin_bottom = 161.0
rect_min_size = Vector2( 160, 30 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
text = "Exit"

[node name="DebugButton" type="Button" parent="PanelContainer/PauseMenuContainer"]
visible = false
margin_top = 259.0
margin_right = 160.0
margin_bottom = 283.0
text = "*DEBUG*"

[node name="ExitMenuContainer" type="VBoxContainer" parent="PanelContainer"]
visible = false
margin_left = 5.0
margin_top = 5.0
margin_right = 155.0
margin_bottom = 57.0

[node name="ExitMenuResumeButton" type="Button" parent="PanelContainer/ExitMenuContainer"]
margin_right = 150.0
margin_bottom = 24.0
text = "Resume"

[node name="ExitMenuSaveButton" type="Button" parent="PanelContainer/ExitMenuContainer"]
margin_top = 28.0
margin_right = 150.0
margin_bottom = 52.0
text = "Save & Exit"

[node name="ExitMenuExitButton" type="Button" parent="PanelContainer/ExitMenuContainer"]
visible = false
margin_top = 56.0
margin_right = 150.0
margin_bottom = 80.0
text = "Exit"

[node name="DebugMenuContainer" type="VBoxContainer" parent="PanelContainer"]
visible = false
margin_left = 5.0
margin_top = 5.0
margin_right = 457.0
margin_bottom = 124.0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/DebugMenuContainer"]
margin_right = 452.0
margin_bottom = 119.0

[node name="VBoxContainerA" type="VBoxContainer" parent="PanelContainer/DebugMenuContainer/HBoxContainer"]
margin_right = 275.0
margin_bottom = 119.0

[node name="Label" type="Label" parent="PanelContainer/DebugMenuContainer/HBoxContainer/VBoxContainerA"]
margin_right = 275.0
margin_bottom = 17.0
text = "Debug options"
align = 1

[node name="InfiniteHealth" parent="PanelContainer/DebugMenuContainer/HBoxContainer/VBoxContainerA" instance=ExtResource( 1 )]
margin_top = 21.0
margin_right = 275.0
margin_bottom = 60.0
text = "Infinite Health"
setting_index = 3

[node name="VSeparator" type="VSeparator" parent="PanelContainer/DebugMenuContainer/HBoxContainer"]
margin_left = 279.0
margin_right = 283.0
margin_bottom = 119.0

[node name="VBoxContainerB" type="VBoxContainer" parent="PanelContainer/DebugMenuContainer/HBoxContainer"]
margin_left = 287.0
margin_right = 452.0
margin_bottom = 119.0

[node name="Label" type="Label" parent="PanelContainer/DebugMenuContainer/HBoxContainer/VBoxContainerB"]
margin_right = 165.0
margin_bottom = 17.0
text = "Load level"
align = 1

[node name="LoadSlimeLevelButton" type="Button" parent="PanelContainer/DebugMenuContainer/HBoxContainer/VBoxContainerB"]
margin_top = 21.0
margin_right = 165.0
margin_bottom = 51.0
rect_min_size = Vector2( 160, 30 )
text = "Slime Level"

[node name="LoadRatLevelButton" type="Button" parent="PanelContainer/DebugMenuContainer/HBoxContainer/VBoxContainerB"]
margin_top = 55.0
margin_right = 165.0
margin_bottom = 85.0
rect_min_size = Vector2( 160, 30 )
text = "Rat Level"

[node name="LoadHouseLevelButton" type="Button" parent="PanelContainer/DebugMenuContainer/HBoxContainer/VBoxContainerB"]
margin_top = 89.0
margin_right = 165.0
margin_bottom = 119.0
rect_min_size = Vector2( 160, 30 )
size_flags_horizontal = 4
text = "House Level"

[connection signal="hide" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_hide"]
[connection signal="pressed" from="PanelContainer/PauseMenuContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="PanelContainer/PauseMenuContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="PanelContainer/PauseMenuContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="PanelContainer/PauseMenuContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="PanelContainer/PauseMenuContainer/DebugButton" to="." method="_on_DebugButton_pressed"]
[connection signal="pressed" from="PanelContainer/ExitMenuContainer/ExitMenuResumeButton" to="." method="_on_ExitMenuResumeButton_pressed"]
[connection signal="pressed" from="PanelContainer/ExitMenuContainer/ExitMenuSaveButton" to="." method="_on_ExitMenuSaveButton_pressed"]
[connection signal="pressed" from="PanelContainer/ExitMenuContainer/ExitMenuExitButton" to="." method="_on_ExitMenuExitButton_pressed"]
[connection signal="pressed" from="PanelContainer/DebugMenuContainer/HBoxContainer/VBoxContainerB/LoadSlimeLevelButton" to="." method="_on_LoadSlimeLevelButton_pressed"]
[connection signal="pressed" from="PanelContainer/DebugMenuContainer/HBoxContainer/VBoxContainerB/LoadRatLevelButton" to="." method="_on_LoadRatLevelButton_pressed"]
[connection signal="pressed" from="PanelContainer/DebugMenuContainer/HBoxContainer/VBoxContainerB/LoadHouseLevelButton" to="." method="_on_LoadHouseLevelButton_pressed"]
